commit jadwal & width

--- a/HtmlCssBasic_A_12332.html
+++ b/HtmlCssBasic_A_12332.html
@@ -24,15 +24,32 @@
     <h3>Jadwal Perkuliahan</h3>
     <table>
       <tr>
-        <th>Sesi</th>
-        <th>Senin</th>
-        <th>Selasa</th>
-        <th>Rabu</th>
-        <th>Kamis</th>
-        <th>Jumat</th>
+        <th rowspan="2">Sesi</th>
+        <th colspan="2">Senin</th>
+        <th colspan="2">Selasa</th>
+        <th colspan="2">Rabu</th>
+        <th colspan="2">Kamis</th>
+        <th colspan="2">Jumat</th>
+      </tr>
+      <tr>
+        <td>Matakuliah</td>
+        <td>Dosen</td>
+        <td>Matakuliah</td>
+        <td>Dosen</td>
+        <td>Matakuliah</td>
+        <td>Dosen</td>
+        <td>Matakuliah</td>
+        <td>Dosen</td>
+        <td>Matakuliah</td>
+        <td>Dosen</td>
       </tr>
       <tr>
         <td>Sesi <br> 1</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
         <td>-</td>
         <td>-</td>
         <td>-</td>
@@ -42,18 +59,28 @@
       <tr>
         <td>Sesi <br> 2</td>
         <td>-</td>
+        <td>-</td>
         <td>Pemrograman Web Dasar</td>
+        <td>Joanna Ardhyanti Mita N, S.Kom., M.Kom.</td>
         <td>Desain Interaksi</td>
+        <td>Fedelis Brian Putra Prakasa, S.T., M.Kom.</td>
         <td>Etika Profesi</td>
+        <td>Prof. Dr. Ir. Alb. Joko Santoso, M.T.</td>
         <td>Pemrograman Aplikasi Web</td>
+        <td>Fedelis Brian Putra Prakasa, S.T., M.Kom.</td>
       </tr>
       <tr>
         <td>Sesi <br> 3</td>
         <td>-</td>
+        <td>-</td>
         <td>Pengujian Perangkat Lunak</td>
+        <td>Benyamin L.Sinaga, S.T., M.Comp.Sc., Ph.D.</td>
         <td>Logika Komputasional</td>
+        <td>Zeny Ernaningsih, S.Pd., M.Pd.</td>
         <td>Sosio-Informatika</td>
+        <td>Bekty Tandaningtyas Sundoro, S.Pd., M.Pd.</td>
         <td>Manajemen Proyek</td>
+        <td>Prof. Dr. Andi Wahju Rahardjo, BSEE., MSSE.</td>
       </tr>
       <tr>
         <td>Sesi <br> 4</td>
@@ -62,9 +89,19 @@
         <td>-</td>
         <td>-</td>
         <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
       </tr>
       <tr>
         <td>Sesi <br> 5</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
+        <td>-</td>
         <td>-</td>
         <td>-</td>
         <td>-</td>
