--- a/HtmlForm_A_12332.html
+++ b/HtmlForm_A_12332.html
@@ -19,7 +19,7 @@
       <!-- TODO: Tambahkan field input teks untuk Nama Mahasiswa dengan tipe teks dan WAJIB DIISI. -->
       <tr>
         <td><strong>Nama Mahasiswa</strong></td>
-        <td><input required type="text" id="namamhs" name="namamhs" size="30" /></td>
+        <td><input required type="textForm" id="namamhs" name="namamhs" size="30" /></td>
       </tr>
 
       <!-- TODO: Tambahkan field radio button untuk Jenis Kelamin (Laki-laki dan Perempuan) dan WAJIB DIISI -->
@@ -50,7 +50,7 @@
       <!-- TODO: Tambahkan field input angka untuk Nomor Telepon dengan tipe number dan WAJIB DIISI. -->
       <tr>
         <td><strong>Nomor Telepon</strong></td>
-        <td><input required type="number" id="notelp" name="notelp" /></td>
+        <td><input required type="numberForm" id="notelp" name="notelp" /></td>
       </tr>
 
       <!-- TODO: Tambahkan field input tanggal untuk Tanggal Lahir dengan tipe date dan WAJIB DIISI. -->
@@ -82,21 +82,28 @@
             <legend>Game</legend>
             <input type="checkbox" id="roblox" name="game[]" value="Roblox">
             <label for="roblox">Roblox</label>
+            <br>
             <input type="checkbox" id="magicchess" name="game[]" value="Magic Chess">
             <label for="magicchess">Magic Chess</label>
+            <br>
             <input type="checkbox" id="valorant" name="game[]" value="Valorant">
             <label for="valorant">Valorant</label>
+            <br>
           </fieldset>
           <fieldset>
             <legend>Film</legend>
             <input type="checkbox" id="drama" name="film[]" value="Drama">
             <label for="drama">Drama</label>
+            <br>
             <input type="checkbox" id="action" name="film[]" value="Action">
             <label for="action">Action</label>
+            <br>
             <input type="checkbox" id="romance" name="film[]" value="Romance">
             <label for="romance">Romance</label>
+            <br>
             <input type="checkbox" id="comedy" name="film[]" value="Comedy">
             <label for="comedy">Comedy</label>
+            <br>
             <input type="checkbox" id="horror" name="film[]" value="Horror">
             <label for="horror">Horror</label>
           </fieldset>
