--- a/JSBasic_A_12332.html
+++ b/JSBasic_A_12332.html
@@ -25,14 +25,14 @@
 
   <div class="card">
     <h3>Input Nama</h3>
-    <input type="text" id="inputNama" placeholder="Ketik namamu...">
+    <input type="textForm" id="inputNama" placeholder="Ketik namamu...">
     <button onclick="tampilkanNama()">Tampilkan</button>
     <p id="output"></p>
   </div>
 
   <div class="card">
     <h3>Hitung Kuadrat</h3>
-    <input type="number" id="angka" placeholder="Masukkan angka...">
+    <input type="numberForm" id="angka" placeholder="Masukkan angka...">
     <button onclick="hitungKuadrat()">Hitung</button>
     <p id="hasil"></p>
   </div>
